# finance_public

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tools.py
scripts/: categorize.py  encrypt.py  graph.py  import_activity.py
tests/: test_categorize.py  test_encrypt.py  test_expense_patterns.py  test_file_settings.py  test_graph.py  test_utils.py
utils/: expense_patterns.py  file_settings.py  utils.py
