[tool.poetry]
name = "finance"
version = "0.1.0"
description = "Personal finance"
authors = ["Ethan <ethan.mill147@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.8"
seaborn = "^0.13.2"
cryptography = "^42.0.8"
yfinance = "^0.2.40"
click = "^8.1.7"
pyexcel-ods3 = "^0.6.1"
psutil = "^6.0.0"
colorama = "^0.4.6"
ipython = "^8.26.0"
python-levenshtein = "^0.25.1"
uno = "^0.3.3"
black = "^24.4.2"
cpi = "^1.1.7"
scipy = "^1.14.0"
coverage = "^7.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.1.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
